--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
+    "seamless-scroll-polyfill": "^2.2.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.4",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +56,7 @@
   "devDependencies": {
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/styled-components": "^5.1.26"
   }
 }
