--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^7.6.4",
     "lottie-react": "^2.3.1",
     "lottie-web": "^5.9.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
