--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "firebase": "^9.6.1",
     "framer-motion": "^7.6.4",
     "lottie-react": "^2.3.1",
     "lottie-web": "^5.9.6",
