--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/uuid": "^8.3.4",
     "firebase": "^9.6.1",
     "framer-motion": "^7.6.4",
     "gh-pages": "^4.0.0",
@@ -30,6 +31,8 @@
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
+    "uuid4": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
