--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/react-scroll": "^1.8.5",
     "@types/uuid": "^8.3.4",
     "firebase": "^9.6.1",
     "framer-motion": "^7.6.4",
@@ -25,6 +26,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "recoil": "^0.7.6",
     "seamless-scroll-polyfill": "^2.2.0",
     "smoothscroll-polyfill": "^0.4.4",
