--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.8",
     "@types/react-scroll": "^1.8.5",
     "@types/uuid": "^8.3.4",
@@ -20,6 +21,7 @@
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.39.1",
@@ -29,7 +31,6 @@
     "react-scroll": "^1.8.8",
     "recoil": "^0.7.6",
     "seamless-scroll-polyfill": "^2.2.0",
-    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4",
     "typescript": "^4.8.4",
