--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.8",
     "@types/react-scroll": "^1.8.5",
     "@types/uuid": "^8.3.4",
+    "apexcharts": "^3.36.3",
     "firebase": "^9.6.1",
     "framer-motion": "^7.6.4",
     "gh-pages": "^4.0.0",
@@ -21,6 +22,7 @@
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
